--- a/src/common/root.less
+++ b/src/common/root.less
@@ -21,7 +21,7 @@
   --font-size-xxxl: calcrem(32);
   --font-size-xxxxl: calcrem(48);
   --font-size-xxxxxl: calcrem(72);
-  --font-size-xxxxxxl: calcrem(92);
+  --font-size-xxxxxxl: calcvw(98);
   --border-radius-default: calcrem(30);
   --border-radius-large: calcrem(70);
   --mobile-break-point: 768px;
