--- a/src/components/block-video/index.less
+++ b/src/components/block-video/index.less
@@ -1,7 +1,7 @@
 .block-video {
   position: relative;
   display: flex;
-  overflow: hidden;
+  overflow: visible;
   flex-direction: column;
 
   &__top {
