--- a/src/components/block-partners/index.less
+++ b/src/components/block-partners/index.less
@@ -29,7 +29,7 @@
     margin-bottom: calcrem(50);
     background-image: url("../../icons/malina-logo.svg");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
 
     .mobile-screen({
       min-width: calcrem(130);
